--- a/modulOne/css/main.css
+++ b/modulOne/css/main.css
@@ -50,8 +50,8 @@ nav {
 	flex-wrap: nowrap;
 	flex-basis: 100%;
 	height: 80px;
-	background-color: rgba(0, 0, 0);
-	border-bottom: rgb(30, 30, 30);
+	background-color: rgba(0, 0, 0, 0.9);
+	border-bottom: rgba(255,86,86,1);
 }
 
 .navLogo {
@@ -67,6 +67,11 @@ nav {
 	margin: 20px;
 }
 
+.helpMenu {
+	display: none;
+	cursor: pointer;
+}
+
 .navMenuItem {
 	display: flex;
 	font-size: 20px;	
@@ -79,7 +84,7 @@ nav {
 }
 
 .navMenuItem a:hover {
- 	color:rgba(201,55,72,1);
+ 	color:rgba(255,86,86,1);
 }	
 
 
@@ -93,9 +98,89 @@ nav {
 	font-size: 30px;
 	text-transform: uppercase;
 	margin: 40px;
+	color: rgba(255,86,86);
 }
 .headerSpecialty {
 	font-size: 70px;
+}
+
+@media screen and (max-width: 900px){
+	.navMenu {
+		display: none;
+	}
+
+	nav .helpMenu {
+		margin-right: 30px;
+		display: flex;
+		width: 24px;
+		height: 28px;
+		position: relative;
+		align-self: center;
+	}
+	nav .helpMenu #checkMenu {
+		display: none;
+	}
+	nav .helpMenu label {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		cursor: pointer;
+		z-index: 2;
+	}
+	.burgerLine {
+		position: absolute;
+		top: 1px;
+		width: 26px;
+		height: 2px;
+		background: white;
+		transition: 0.3s all;
+	}
+	.second, .third {
+		top: 11px;
+	}
+	.fourth {
+		top: 23px;
+	}
+
+		#checkMenu:checked ~ .first {
+		display: none;
+		}
+		#checkMenu:checked ~ .second {
+			transform: rotate(45deg);
+			background: rgba(255,86,86);
+		}
+		#checkMenu:checked ~ .third {
+			transform: rotate(-45deg);
+			background: rgba(255,86,86);
+		}
+		#checkMenu:checked ~ .fourth {
+			display: none;
+	}
+}
+
+@media screen and (max-width: 500px){
+	nav {
+		height: 60px;
+	}
+	.navLogo {
+		margin-left: 0;
+		height: 100%;
+		justify-content: flex-start;
+		align-items: center;
+		width: 220px;
+	}
+
+	.navLogo img {
+		width: 100%;
+	}
+}
+@media screen and (max-width: 360px){
+	.headerSpecialty {
+		font-size: 40px;
+	}
 }
 
 /*конец хедера начало about*/
@@ -124,11 +209,17 @@ nav {
 .aboutWrapperName {
 	margin: 10px;
 	font-family: Raleway-ExtraBold;
+	color: rgba(255,86,86);
 }
 
 .aboutWrapperMe {
 	margin: 20px;
-	font-family: 
+}
+
+@media screen and (max-width: 440px) {
+	.aboutWrapperMe {
+		font-size: 25px;
+	}
 }
 
 /*конец обо мне, начало галлереи*/
@@ -178,6 +269,11 @@ nav {
 }
 .galleriItem:hover {
 	background: rgba(40,42,43,0.3);
+	font-family: Raleway-ExtraBold;
+}
+
+.galleriItem:hover img{
+	box-shadow: 1px 3px 15px rgba(255,255,255,1);
 }
 
 .galleriItemPortrait {
@@ -186,19 +282,44 @@ nav {
 	justify-content: center;
 	margin: 10px;
 }
-
+@media screen and (max-width: 740px) {
+	.galleryHeadline {
+		font-size: 30px;
+	}
+}
+@media screen and (max-width: 320px){
+	.galleriItem {
+		width: 100%;
+	}
+	.galleriItem img {
+		width: 200px;
+		height: 150px;
+	}
+}
 /*конец галереи начало цен*/
 .price {
 	display: flex;
 	background: white;
 	justify-content: center;
 	font-size: 20px;
+	flex-wrap: wrap;
 
 	background: rgb(201,55,72); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(201,55,72,1) 0%, rgba(40,42,43,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, rgba(201,55,72,1) 0%,rgba(40,42,43,1) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, rgba(201,55,72,1) 0%,rgba(40,42,43,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=0 ); /* IE6-9 */
+}
+
+.priceName {
+	flex-basis: 100%;
+	display: flex;
+	justify-content: center;
+	margin: 30px 0;
+	font-size: 60px;
+	color: rgb(255, 255, 255);
+	text-align: center;
+	font-family: Raleway-ExtraBold;
 }
 
 .priceWrapper {
@@ -222,6 +343,10 @@ nav {
 	display: flex;
 	flex-basis: 100%;
 	justify-content: flex-end;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+.priceWrapperListItem:last-child {
+	border-bottom: none;
 }
 
 .priceWrapperListItem span {
@@ -234,7 +359,22 @@ nav {
 	font-family: Raleway-ExtraBold;
 }
 
+@media screen and (max-width: 740px) {
+	.priceName {
+		font-size: 30px;
+	}
+}
+@media screen and (max-width: 320px) {
+	.price {
+		font-size: 12px;
+	}
 
+	.priceWrapperListItem span {
+		min-width: 100px;
+	}
+} 
+
+/*конец цен, начало паллитры*/
 .palette {
 	display: flex;
 	justify-content: center;
@@ -253,6 +393,7 @@ nav {
 	color: white;
 	font-size: 50px;
 	margin-top: 30px;
+	font-family: Raleway-ExtraBold;
 }
 
 .palleteSlider {
@@ -273,7 +414,7 @@ ul.accordion li {
 	padding: 1px 1px 0;
 	cursor: pointer;
 	display: block;
-	box-shadow: 1px 3px 15px rgba(40,42,43,1);
+	box-shadow: 1px 3px 15px rgba(255,255,255,1);
 	transition: all 1.5s;
 }
 ul.accordion img {
@@ -282,23 +423,119 @@ ul.accordion img {
 
 ul.accordion li:hover {
 	width: 300px;
-	box-shadow: 1px 3px 15px rgba(201,55,72,1);
+	box-shadow: 5px 3px 10px rgba(201,55,72,1);
 	transition: all 1s;
 }
 
 ul.accordion li:nth-child(4){
 	width: 300px;
+	box-shadow: 5px 3px 15px rgba(201,55,72,1);
 }
 
 ul.accordion:hover li:nth-child(4){
 	width: 50px;
+	box-shadow: 5px 3px 15px rgba(255,255,255,1);
 }
 
 ul.accordion li:nth-child(4):hover{
 	width: 300px;
+	box-shadow: 5px 3px 15px rgba(201,55,72,1);
 }
 
+@media screen and (max-width: 740px) {
+	.palette {
+		height: 100vh;
+	}
 
+	.paletteName {
+		font-size: 30px;
+		margin: 10px;
+	}
+
+	.palleteSlider {
+		max-width: 300px;
+		max-height: 230px;
+		margin: 0 auto;
+	}
+
+	ul.accordion {
+		display: flex;
+		align-self: center;
+		margin-top: 20px;
+		padding: 0;
+		flex-wrap: wrap;
+	}
+
+	ul.accordion li {
+		width: 100%;
+		display: flex;
+		height: 50px;
+	}
+
+	ul.accordion img {
+		height: 230px;
+	}
+
+	ul.accordion li:hover {
+		height: 230px;
+	}
+
+
+	ul.accordion li:nth-child(4){
+		height: 230px;
+	}
+
+	ul.accordion:hover li:nth-child(4){
+		height: 50px;
+		width: 100%;
+	}
+
+	ul.accordion li:nth-child(4):hover{
+		height: 230px;
+	}
+}
+
+@media screen and (max-width: 380px) {
+	.palette {
+		height: 90vh;
+	}
+
+	.palleteSlider {
+		max-width: 200px;
+		max-height: 175px;
+	}
+
+	ul.accordion li {
+		width: 100%;
+		height: 33px;
+	}
+
+	ul.accordion img {
+		height: 175px;
+		width: 100%;
+	}
+
+	ul.accordion li:hover {
+		height: 175px;
+	}
+
+
+	ul.accordion li:nth-child(4){
+		height: 175px;
+	}
+
+	ul.accordion:hover li:nth-child(4){
+		height: 33px;
+	
+	}
+
+	ul.accordion li:nth-child(4):hover{
+		height: 175px;
+	
+	}
+}
+
+/*конец палитры начало футура(контакты)*/
 .contacts {
 	display: flex;
 	flex-wrap: wrap;
@@ -314,6 +551,8 @@ ul.accordion li:nth-child(4):hover{
 	display: flex;
 	margin: 30px;
 	font-size: 30px;
+	font-family: Raleway-ExtraBold;
+	color: rgba(255,86,86);
 }
 
 .contactsWrapper {
@@ -324,7 +563,9 @@ ul.accordion li:nth-child(4):hover{
 	height: 100%;
 	justify-content: center;
 }
-
+.contactsName {
+	margin: 10px;
+}
 .contactsWrapper img {
 	margin: 30px;
 	height: 100px;
@@ -334,4 +575,12 @@ ul.accordion li:nth-child(4):hover{
 
 .contactsWrapper img:hover {
 	filter: invert(100%);
+}
+
+@media screen and (max-width: 450px) {
+	.contactsWrapper img {
+		margin: 10px;
+		height: 50px;
+		width: 50px;
+	}
 }
