--- a/modulTwo/css/main.css
+++ b/modulTwo/css/main.css
@@ -530,7 +530,8 @@ nav {
 	align-items: flex-start;
 	justify-content: space-between;
 	align-self: flex-start;
-	flex-wrap: nowrap;
+	align-content: flex-start;
+	flex-wrap: wrap;
 	position: fixed;
 	width: 97%;
 	height: 97vh;
@@ -562,11 +563,21 @@ nav {
 	background-attachment: local;
 }
 
+.cartName {
+	text-align: center;
+	width: 100%;
+	font-family: Raleway-ExtraBold;
+	font-size: 50px;
+	color: white;
+	margin: 40px;
+}
+
 .containerCart slot {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	margin-left: 20px;
+	margin-top: 30px;
 }
 
 .orderItem {
@@ -596,13 +607,22 @@ nav {
 
 
 .cartClose {
+		position: absolute;
+		top: 20px;
+		right: 20px;
 		flex-shrink: 0;
 		width: 50px;
 		height: 50px;
 		cursor: pointer;
-		background: url(../img/close.svg);
+		/* background: url(../img/close.svg); */
 		margin: 10px;
 }
+
+/* .gallery-close svg:hover #close,
+.btnBack svg:hover #leftArrow,
+.btnNext svg:hover #rhigtArrow {
+	fill: rgba(255, 86, 86, 1);
+} */
 
 @media screen and (max-width: 1024px) {
 	.orderItem {
