--- a/modulTwo/css/main.css
+++ b/modulTwo/css/main.css
@@ -524,6 +524,18 @@ nav {
 	padding: 10px 4px;
 }
 
+@media screen and (max-width: 600px) {
+	.serviceInContainer {
+		font-size: 14px;
+	}
+}
+
+@media screen and (max-width: 408px) {
+	.serviceInContainer {
+		font-size: 10px;
+	}
+}
+
 /* Container-cart (Модальное окно корзины) */
 .containerCart {
 	display: none;
@@ -614,15 +626,9 @@ nav {
 		width: 50px;
 		height: 50px;
 		cursor: pointer;
-		/* background: url(../img/close.svg); */
 		margin: 10px;
 }
 
-/* .gallery-close svg:hover #close,
-.btnBack svg:hover #leftArrow,
-.btnNext svg:hover #rhigtArrow {
-	fill: rgba(255, 86, 86, 1);
-} */
 
 @media screen and (max-width: 1024px) {
 	.orderItem {
